--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+# Path to the upload folder, it must exist
+fileUploader.path=/tmp/s3/
+# S3 configuration
+s3.endpointUrl=https://s3.us-east-2.amazonaws.com
+s3.accessKey=xxx
+s3.secretKey=xxx
+s3.bucketName=multiupload
+# Switch between S3 and local upload
+#uploadServiceType=local
+uploadServiceType=s3
