fix: Error codes, packages & configs🫸🌀✏️📗🐧🐳⬆

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ s3.endpointUrl=https://s3.us-east-2.amazonaws.com
 s3.accessKey=xxx
 s3.secretKey=xxx
 s3.bucketName=multiupload
+s3.region=ap-southeast-1
 # Switch between S3 and local upload
 #uploadServiceType=local
 uploadServiceType=s3
